--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ tags
 .vscode/*
 .history
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
+
+manager
+cmd/manager/manager
+cmd/authservice/authservice
