Renamed module & API.

--- a/deploy/crds/registry.mgoltzsche.github.com_imagepullsecret_cr.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_imagepullsecret_cr.yaml
@@ -1,4 +1,4 @@
-apiVersion: credentialmanager.mgoltzsche.github.com/v1alpha1
+apiVersion: registry.mgoltzsche.github.com/v1alpha1
 kind: ImagePullSecret
 metadata:
   name: example-imagepullsecret
