--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -1,8 +1,9 @@
 resources:
-- crds/credentialmanager.mgoltzsche.github.com_imagepullsecrets_crd.yaml
+- crds/registry.mgoltzsche.github.com_imagepullsecrets_crd.yaml
 - service_account.yaml
 - role.yaml
 - role_binding.yaml
 - operator.yaml
+#- skaffold-kaniko-podpreset.yaml
 
 namespace: build
