--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   creationTimestamp: null
-  name: credential-manager
+  name: image-registry-operator
 rules:
 - apiGroups:
   - ""
@@ -48,7 +48,7 @@ rules:
 - apiGroups:
   - apps
   resourceNames:
-  - credential-manager
+  - image-registry-operator
   resources:
   - deployments/finalizers
   verbs:
@@ -67,7 +67,7 @@ rules:
   verbs:
   - get
 - apiGroups:
-  - credentialmanager.mgoltzsche.github.com
+  - registry.mgoltzsche.github.com
   resources:
   - '*'
   verbs:
