--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,11 +1,11 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: credential-manager
+  name: image-registry-operator
 subjects:
 - kind: ServiceAccount
-  name: credential-manager
+  name: image-registry-operator
 roleRef:
   kind: Role
-  name: credential-manager
+  name: image-registry-operator
   apiGroup: rbac.authorization.k8s.io
