--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,5 @@ tags
 .history
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 
-manager
 cmd/manager/manager
+cmd/authn-client/authn-client
