--- a/deploy/crds/registry.mgoltzsche.github.com_imagepushsecrets_crd.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_imagepushsecrets_crd.yaml
@@ -1,20 +1,20 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: imagepullsecrets.registry.mgoltzsche.github.com
+  name: imagepushsecrets.registry.mgoltzsche.github.com
 spec:
   group: registry.mgoltzsche.github.com
   names:
-    kind: ImagePullSecret
-    listKind: ImagePullSecretList
-    plural: imagepullsecrets
-    singular: imagepullsecret
+    kind: ImagePushSecret
+    listKind: ImagePushSecretList
+    plural: imagepushsecrets
+    singular: imagepushsecret
   scope: Namespaced
   subresources:
     status: {}
   validation:
     openAPIV3Schema:
-      description: ImagePullSecret is the Schema for the imagepullsecrets API
+      description: ImagePushSecret is the Schema for the imagepushsecrets API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -29,7 +29,7 @@ spec:
         metadata:
           type: object
         spec:
-          description: ImagePullSecretSpec defines the desired state of ImagePullSecret
+          description: ImagePushSecretSpec defines the desired state of ImagePushSecret
           type: object
         status:
           description: ImageSecretStatus defines the observed state of ImagePullSecret
