--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - role.yaml
 - role_binding.yaml
 - operator.yaml
+- registry-ca-cluster-issuer.yaml
 #- skaffold-kaniko-podpreset.yaml
 
 namespace: build
