Add registryRef to image secret CRDs.
Write registry hostname and CA certificate into image secret as well.

--- a/deploy/crds/registry.mgoltzsche.github.com_imagesecrets_crd.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_imagesecrets_crd.yaml
@@ -1,20 +1,17 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: imageregistries.registry.mgoltzsche.github.com
+  name: imagesecrets.registry.mgoltzsche.github.com
 spec:
   group: registry.mgoltzsche.github.com
   names:
-    kind: ImageRegistry
-    listKind: ImageRegistryList
-    plural: imageregistries
-    singular: imageregistry
+    kind: ImageSecret
+    listKind: ImageSecretList
+    plural: imagesecrets
+    singular: imagesecret
   scope: Namespaced
-  subresources:
-    status: {}
   validation:
     openAPIV3Schema:
-      description: ImageRegistry is the Schema for the imageregistries API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -29,80 +26,22 @@ spec:
         metadata:
           type: object
         spec:
-          description: ImageRegistrySpec defines the desired state of ImageRegistry
+          description: ImageSecretSpec defines the desired state of ImagePushSecret/ImagePullSecret
           properties:
-            auth:
-              description: AuthSpec specifies the CA certificate and optional docker_auth
-                ConfigMap name
+            registryRef:
+              description: ImageRegistryRef refers to an ImageRegistry
               properties:
-                configMapName:
+                name:
                   type: string
-                issuerRef:
-                  description: CertificateIssuerSpec refers to a certificate issuer
-                  properties:
-                    kind:
-                      type: string
-                    name:
-                      type: string
-                  required:
-                  - kind
-                  - name
-                  type: object
-              type: object
-            persistentVolumeClaim:
-              description: PersistentVolumeClaimSpec specifies the PersistentVolumeClaim
-                that should be maintained
-              properties:
-                accessModes:
-                  items:
-                    type: string
-                  type: array
-                resources:
-                  description: ResourceRequirements describes the compute resource
-                    requirements.
-                  properties:
-                    limits:
-                      additionalProperties:
-                        type: string
-                      description: 'Limits describes the maximum amount of compute
-                        resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
-                      type: object
-                    requests:
-                      additionalProperties:
-                        type: string
-                      description: 'Requests describes the minimum amount of compute
-                        resources required. If Requests is omitted for a container,
-                        it defaults to Limits if that is explicitly specified, otherwise
-                        to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
-                      type: object
-                  type: object
-                storageClassName:
+                namespace:
                   type: string
+              required:
+              - name
+              - namespace
               type: object
-            replicas:
-              format: int32
-              type: integer
-            tls:
-              description: TLSSpec specifies the certificate that should be used
-              properties:
-                issuerRef:
-                  description: CertificateIssuerSpec refers to a certificate issuer
-                  properties:
-                    kind:
-                      type: string
-                    name:
-                      type: string
-                  required:
-                  - kind
-                  - name
-                  type: object
-              type: object
-          required:
-          - persistentVolumeClaim
-          - tls
           type: object
         status:
-          description: ImageRegistryStatus defines the observed state of ImageRegistry
+          description: ImageSecretStatus defines the observed state of ImagePullSecret
           properties:
             conditions:
               additionalProperties:
@@ -142,13 +81,23 @@ spec:
                 - status
                 - type
                 type: object
-              description: Conditions is a set of Condition instances.
+              description: Conditions represent the latest available observations
+                of an object's state
               type: array
-            hostname:
-              type: string
-            observedGeneration:
+            passwords:
+              description: The currently active bcrypt encoded passwords - should
+                be two.
+              items:
+                type: string
+              type: array
+            rotation:
+              description: Password rotation amount.
               format: int64
               type: integer
+            rotationDate:
+              description: Date on which the latest password has been generated.
+              format: date-time
+              type: string
           type: object
       type: object
   version: v1alpha1
