Fixed registry config & added examples.

--- a/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imagepushsecret_cr.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imagepushsecret_cr.yaml
@@ -3,5 +3,6 @@ kind: ImagePushSecret
 metadata:
   name: example-imagepushsecret
 spec:
-  # Add fields here
-  size: 3
+  registryRef:
+    name: registry
+    namespace: build
