--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -70,8 +70,19 @@ rules:
   - registry.mgoltzsche.github.com
   resources:
   - '*'
-  - imagepushsecrets
-  - imageregistries
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cert-manager.io
+  resources:
+  - certificates
+  - issuers
   verbs:
   - create
   - delete
