--- a/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imagepushsecret_cr.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imagepushsecret_cr.yaml
@@ -2,6 +2,7 @@ apiVersion: registry.mgoltzsche.github.com/v1alpha1
 kind: ImagePushSecret
 metadata:
   name: example-imagepushsecret
+  namespace: build
 spec:
   registryRef:
     name: registry
