--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - role.yaml
 - role_binding.yaml
 - operator.yaml
-- registry-ca-cluster-issuer.yaml
-#- skaffold-kaniko-podpreset.yaml
+- registry_ca_cluster_issuer.yaml
+- registry_rbac.yaml
 
 namespace: build
