Add ImageRegistryAccount CRD.

--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
 - role_binding.yaml
 - operator.yaml
 - registry_ca_cluster_issuer.yaml
-- registry_rbac.yaml
+#- registry_rbac.yaml
 
 namespace: build
