--- a/deploy/registry-selfsigned/kustomization.yaml
+++ b/deploy/registry-selfsigned/kustomization.yaml
@@ -1,12 +1,10 @@
-namespace: build
-
 bases:
 - github.com/mgoltzsche/nodehack/deploy
 
 resources:
 - selfsigned-issuer.yaml
+- tls-issuer.yaml
 - registry.yaml
-- coredns-configmap.yaml
 
 patchesStrategicMerge:
 - registry-nodehack-daemonset-patch.yaml
