--- a/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imagepushsecret_cr.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imagepushsecret_cr.yaml
@@ -1,9 +1,8 @@
 apiVersion: registry.mgoltzsche.github.com/v1alpha1
 kind: ImagePushSecret
 metadata:
-  name: example-imagepushsecret
-  namespace: build
+  name: example
 spec:
   registryRef:
     name: registry
-    namespace: build
+    #namespace: infra
