--- a/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imageregistryaccount_cr.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imageregistryaccount_cr.yaml
@@ -3,5 +3,5 @@ kind: ImageRegistryAccount
 metadata:
   name: example-imageregistryaccount
 spec:
-  passwords: $12$asdgasdg
+  passwords: $12$asdfasdf
     
