Manage root CA in separate controller.
Also ensures that the image-registry-root-ca Secret exists when
the operator starts making its existence independent of
ImageRegistry resources (which may be deployed after successful
operator deployment only).

--- a/deploy-overlays/coredns-public-zone/kustomization.yaml
+++ b/deploy-overlays/coredns-public-zone/kustomization.yaml
@@ -1,6 +1,9 @@
 bases:
-- ../cluster-scoped
+- ../self-signed
 
 resources:
 # TODO: Template configmap with external zone
 - coredns-configmap.yaml
+
+patchesStrategicMerge:
+- operator-patch.yaml
