Stabilize tests + improve docs

--- a/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imagepullsecret_cr.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_v1alpha1_imagepullsecret_cr.yaml
@@ -2,3 +2,6 @@ apiVersion: registry.mgoltzsche.github.com/v1alpha1
 kind: ImagePullSecret
 metadata:
   name: example
+spec:
+  registryRef:
+    name: registry
