--- a/deploy/crds/registry.mgoltzsche.github.com_imageregistries_crd.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_imageregistries_crd.yaml
@@ -66,6 +66,8 @@ spec:
                   items:
                     type: string
                   type: array
+                deleteClaim:
+                  type: boolean
                 resources:
                   description: ResourceRequirements describes the compute resource
                     requirements.
