Add makisu image.
Also renamed Secret key hostname to registry.
Also updated skaffold.yaml.

--- a/deploy/minikube/kustomization.yaml
+++ b/deploy/minikube/kustomization.yaml
@@ -1,9 +1,5 @@
 bases:
 - ../cluster-wide
-# Configures DNS and the CA root certificate on the nodes
-- github.com/mgoltzsche/nodehack/deploy
-
-patchesStrategicMerge:
-- registry-nodehack-daemonset-patch.yaml
+- ../nodehack
 
 namespace: image-registry-operator
