--- a/deploy/operator/role.yaml
+++ b/deploy/operator/role.yaml
@@ -1,6 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+  creationTimestamp: null
   name: image-registry-operator
 rules:
 - apiGroups:
@@ -84,6 +85,7 @@ rules:
   resources:
   - '*'
   - imageregistryaccounts
+  - imagebuildenvs
   verbs:
   - create
   - delete
