Improved ImageBuildEnv refs

--- a/deploy/crds/registry.mgoltzsche.github.com_imagebuildenvs_crd.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_imagebuildenvs_crd.yaml
@@ -90,6 +90,11 @@ spec:
             observedGeneration:
               format: int64
               type: integer
+            secretRefs:
+              description: SecretRefs lists the watched input secrets
+              items:
+                type: string
+              type: array
           type: object
       type: object
   version: v1alpha1
