Delete account on secret CR deletion.
Also improves back reference handling for ImageBuildEnv.

--- a/deploy/crds/registry.mgoltzsche.github.com_imagesecrets_crd.yaml
+++ b/deploy/crds/registry.mgoltzsche.github.com_imagesecrets_crd.yaml
@@ -83,6 +83,13 @@ spec:
               description: Conditions represent the latest available observations
                 of an object's state
               type: array
+            registry:
+              description: ImageSecretStatusRegistry specifies the last observed registry
+                reference
+              properties:
+                namespace:
+                  type: string
+              type: object
             rotation:
               description: Password rotation amount.
               format: int64
