--- a/deploy/operator/operator.yaml
+++ b/deploy/operator/operator.yaml
@@ -14,29 +14,35 @@ spec:
     spec:
       serviceAccountName: image-registry-operator
       containers:
-        - name: operator
-          image: mgoltzsche/image-registry-operator:latest
-          command:
-          - image-registry-operator
-          imagePullPolicy: IfNotPresent
-          env:
-            - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: OPERATOR_NAME
-              value: "image-registry-operator"
-            - name: OPERATOR_DNS_ZONE
-              value: "svc.cluster.local"
-            - name: OPERATOR_SECRET_TTL
-              value: "24h"
-            - name: OPERATOR_DEFAULT_REGISTRY_NAME
-              value: "registry"
-            - name: OPERATOR_DEFAULT_REGISTRY_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+      - name: operator
+        image: mgoltzsche/image-registry-operator:latest # {"$openapi":"registry-manager-image"}
+        command:
+        - image-registry-operator
+        imagePullPolicy: IfNotPresent
+        env:
+        - name: WATCH_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: OPERATOR_NAME
+          value: "image-registry-operator"
+        - name: OPERATOR_DNS_ZONE
+          value: "svc.cluster.local"
+        - name: OPERATOR_SECRET_TTL
+          value: "24h"
+        - name: OPERATOR_DEFAULT_REGISTRY_NAME
+          value: "registry"
+        - name: OPERATOR_DEFAULT_REGISTRY_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: OPERATOR_IMAGE_REGISTRY
+          value: registry:2 # {"$openapi":"registry-image"}
+        - name: OPERATOR_IMAGE_AUTH
+          value: mgoltzsche/image-registry-operator:latest-auth # {"$openapi":"registry-auth-image"}
+        - name: OPERATOR_IMAGE_NGINX
+          value: mgoltzsche/image-registry-operator:latest-nginx # {"$openapi":"registry-nginx-image"}
